fix(nav-tabs): prevent flickering when navigating between tabs (#3148)
fixes https://github.com/openshiftio/openshift.io/issues/3986

--- a/src/app/profile/overview/overview.component.less
+++ b/src/app/profile/overview/overview.component.less
@@ -110,19 +110,23 @@
   margin-left: -48px;
   background-color: @color-pf-black-150;
   border-bottom: 1px solid @color-pf-black-300;
-  ul {
-    list-style-type: none;
-    padding-left: 25px;
-  }
-  li {
-    padding-right: 10px;
-    display: inline-block;
-  }
-  a {
-    color: @color-pf-black;
-    text-decoration: none;
-  }
-  a:hover {
-    color: @color-pf-blue;
+  .nav-tabs {
+    ul {
+      list-style-type: none;
+      padding-left: 25px;
+    }
+    li {
+      padding-right: 10px;
+      display: inline-block;
+    }
+    a {
+      border: none;
+      margin-bottom: 1px;
+      color: @color-pf-black;
+      text-decoration: none;
+    }
+    a:hover {
+      color: @color-pf-blue;
+    }
   }
 }
