--- a/src/app/profile/settings/settings.component.less
+++ b/src/app/profile/settings/settings.component.less
@@ -29,7 +29,9 @@
     display: inline-block;
   }
   a {
+    border: none;
     color: @color-pf-black;
+    margin-bottom: 1px;
     text-decoration: none;
   }
   a:hover {
