--- a/src/app/profile/update/update.component.less
+++ b/src/app/profile/update/update.component.less
@@ -145,6 +145,25 @@ textarea {
 }
 
 .profile-overview-nav {
+  padding: 4px 0 0;
+  margin-left: -48px;
   background-color: @color-pf-black-150;
   border-bottom: 1px solid @color-pf-black-300;
+  ul {
+    list-style-type: none;
+    padding-left: 25px;
+    li {
+      padding-right: 10px;
+      display: inline-block;
+      a {
+        border: none;
+        margin-bottom: 1px;
+        color: @color-pf-black;
+        text-decoration: none;
+      }
+      a:hover {
+        color: @color-pf-blue;
+      }
+    }
+  }
 }
